Multiple clients can now talk to one server.  Whole lotta testing and usability to go, but the actual connection and syncing part is now working

--- a/app/ride/template.hbs
+++ b/app/ride/template.hbs
@@ -7,5 +7,15 @@ There are {{localRiders.length}} riders.
     Name: {{riderDisplay.name}}<br />
     Position: {{riderDisplay.distance}}<br />
     Speed: {{riderDisplay.speed}}<br />
+    Slope: {{riderDisplay.slope}}<br />
+  </div>
+{{/each}}
+<h3>Remote Riders</h3>
+{{#each remoteRiders as |riderDisplay|}}
+  <div>
+    Name: {{riderDisplay.name}}<br />
+    Position: {{riderDisplay.distance}}<br />
+    Speed: {{riderDisplay.speed}}<br />
+    Slope: {{riderDisplay.slope}}<br />
   </div>
 {{/each}}
