--- a/app/ride/template.hbs
+++ b/app/ride/template.hbs
@@ -1,21 +1,23 @@
-You're riding!  You have gone {{lastLocalMeters}}
-
-There are {{localRiders.length}} riders.
-
-{{#each localRiders as |riderDisplay|}}
-  <div>
-    Name: {{riderDisplay.name}}<br />
-    Position: {{riderDisplay.distance}}<br />
-    Speed: {{riderDisplay.speed}}<br />
-    Slope: {{riderDisplay.slope}}<br />
-  </div>
-{{/each}}
-<h3>Remote Riders</h3>
-{{#each remoteRiders as |riderDisplay|}}
-  <div>
-    Name: {{riderDisplay.name}}<br />
-    Position: {{riderDisplay.distance}}<br />
-    Speed: {{riderDisplay.speed}}<br />
-    Slope: {{riderDisplay.slope}}<br />
-  </div>
-{{/each}}
+{{#if connection.preRace}}
+  {{display-pre-race frame=frame localRiders=localRiders remoteRiders=remoteRiders}}
+{{else if connection.racing}}
+  {{#each localRiders as |riderDisplay|}}
+    <div>
+      Name: {{riderDisplay.name}}<br />
+      Position: {{riderDisplay.distance}}<br />
+      Speed: {{riderDisplay.speed}}<br />
+      Slope: {{riderDisplay.slope}}<br />
+    </div>
+  {{/each}}
+  <h3>Remote Riders</h3>
+  {{#each remoteRiders as |riderDisplay|}}
+    <div>
+      Name: {{riderDisplay.name}}<br />
+      Position: {{riderDisplay.distance}}<br />
+      Speed: {{riderDisplay.speed}}<br />
+      Slope: {{riderDisplay.slope}}<br />
+    </div>
+  {{/each}}
+{{else if connection.postRace}}
+  {{display-post-race frame=frame results=connection.raceResults}}
+{{/if}}
