--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -2,6 +2,10 @@
 @import './tourjs-header.scss';
 @import './user-set-up-widget.scss';
 @import './set-up-ride.scss';
+@import './pending-race.scss';
+@import './mini-map.scss';
+@import './main-map.scss';
+@import './leader-board.scss';
 
 * {
   font-family: sans-serif;
