--- a/app/components/pending-race/template.hbs
+++ b/app/components/pending-race/template.hbs
@@ -1,1 +1,41 @@
-<button class="set-up-ride__button" {{action joinRace race.name}}>Join {{race.name}}</button>
+<div class="pending-race__content">
+  <div class="pending-race__row">
+    <span class="pending-race__key">
+      What:
+    </span>
+    <span class="pending-race__value">
+      {{race.name}}
+    </span>
+  </div>
+
+  {{#if hasWhen}}
+    <div class="pending-race__row">
+      <span class="pending-race__key">
+        When:
+      </span>
+      <span class="pending-race__value">
+        {{raceTime}}
+      </span>
+    </div>
+  {{/if}}
+  <div class="pending-race__row">
+    <span class="pending-race__key">
+      Current Riders:
+    </span>
+    <span class="pending-race__value">
+      {{race.whoIn.length}}
+    </span>
+  </div>
+  <div class="pending-race__row">
+    <span class="pending-race__key">
+      Status:
+    </span>
+    <span class="pending-race__value">
+      {{statusString}}
+    </span>
+  </div>
+  <div class="pending-race__row">
+    {{mini-map race=race}}
+  </div>
+  <button class="pending-race__join-button" {{action joinRace race.name}}>Join</button>
+</div>
