Getting bluetooth talking.  Now just need a display screen that works

--- a/app/test-hacks/template.hbs
+++ b/app/test-hacks/template.hbs
@@ -1,3 +1,1 @@
-{{main-map raceState=raceState}}
-{{user-dashboard raceState=raceState frame=frame}}
-{{leader-board raceState=raceState frame=frame}}
+{{display-race raceState=raceState}}
