--- a/app/components/display-race/template.hbs
+++ b/app/components/display-race/template.hbs
@@ -1,1 +1,4 @@
-{{yield}}
+
+{{main-map raceState=raceState}}
+{{user-dashboard raceState=raceState frame=frame}}
+{{leader-board raceState=raceState frame=frame}}
