Ok, we ready for reality?

--- a/app/components/display-race/template.hbs
+++ b/app/components/display-race/template.hbs
@@ -1,4 +1,6 @@
 
 {{main-map raceState=raceState}}
-{{user-dashboard raceState=raceState frame=frame}}
-{{leader-board raceState=raceState frame=frame}}
+<div class="display-race__info-container">
+  {{user-dashboard raceState=raceState frame=frame}}
+  {{leader-board raceState=raceState frame=frame}}
+</div>
