--- a/app/components/pending-race/template.hbs
+++ b/app/components/pending-race/template.hbs
@@ -23,7 +23,7 @@
       Current Riders:
     </span>
     <span class="pending-race__value">
-      {{race.whoIn.length}}
+      {{race.whoIn.length}} humans, {{race.whoInAi.length}} AI
     </span>
   </div>
   <div class="pending-race__row">
