--- a/app/components/user-dashboard/template.hbs
+++ b/app/components/user-dashboard/template.hbs
@@ -1,22 +1,22 @@
 {{#if userDisplay}}
-  <table>
-    <tr>
+  <table class="user-dashboard__table">
+    <tr class="user-dashboard__tr">
       <td>Name:</td>
       <td>{{userDisplay.name}}</td>
     </tr>
-    <tr>
+    <tr  class="user-dashboard__tr">
       <td>Power:</td>
       <td>{{userDisplay.lastPower}}</td>
     </tr>
-    <tr>
+    <tr class="user-dashboard__tr">
       <td>Distance:</td>
       <td>{{userDisplay.distance}}</td>
     </tr>
-    <tr>
+    <tr class="user-dashboard__tr">
       <td>Speed:</td>
       <td>{{userDisplay.speed}}</td>
     </tr>
-    <tr>
+    <tr class="user-dashboard__tr">
       <td>Slope:</td>
       <td>{{userDisplay.slope}}</td>
     </tr>
