--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -6,6 +6,8 @@
 @import './mini-map.scss';
 @import './main-map.scss';
 @import './leader-board.scss';
+@import './user-dashboard.scss';
+@import './display-race';
 
 * {
   font-family: sans-serif;
