--- a/app/styles/leader-board.scss
+++ b/app/styles/leader-board.scss
@@ -5,6 +5,7 @@
     background-color: white;
     border: 1px solid black;
     max-width: 320px;
+    min-width: 320px;
   }
   &__title {
     text-align: center;
