--- a/app/components/display-race/template.hbs
+++ b/app/components/display-race/template.hbs
@@ -1,6 +1,10 @@
 
-{{main-map raceState=raceState}}
-<div class="display-race__info-container">
-  {{user-dashboard raceState=raceState frame=frame}}
-  {{leader-board raceState=raceState frame=frame}}
+<div class="display-race__content">
+  <div class="display-race__main-holder">
+    {{main-map raceState=raceState}}
+  </div>
+  <div class="display-race__info-container">
+    {{user-dashboard raceState=raceState frame=frame}}
+    {{leader-board raceState=raceState frame=frame}}
+  </div>
 </div>
