--- a/app/styles/display-race.scss
+++ b/app/styles/display-race.scss
@@ -2,5 +2,16 @@
   &__info-container {
     display: flex;
     flex-direction: row;
+    flex: 0 0 auto;
   }
+  &__content {
+    display: flex;
+    flex-direction: column;
+    max-height: 100vh;
+    background-color: red;
+  }
+  &__main-holder {
+    flex: 1 1 0px;
+  }
+
 }
