--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -11,14 +11,17 @@
 
 * {
   font-family: sans-serif;
+  padding: 0;
+  margin: 0;
 }
 body {
   background-color: lightpink;
+  overflow: hidden;
 }
 
 .application {
   &__container {
-    max-width: 1200px;
+    //max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
   }
