--- a/app/styles/leader-board.scss
+++ b/app/styles/leader-board.scss
@@ -2,7 +2,6 @@
   &__container {
     display: flex;
     flex-direction: column;
-    background-color: white;
     border: 1px solid black;
     max-width: 320px;
     min-width: 320px;
@@ -12,7 +11,8 @@
     text-transform: uppercase;
     font-size: 16px;
     font-weight: bold;
-    margin: 16px;
+    margin: 4px;
+    color: white;
   }
   &__rank {
     flex: 1 1 auto;
@@ -22,21 +22,20 @@
     box-sizing: border-box;
     border-top: 0.5px solid rgba(0,0,0,1.0);
 
-    background-color: rgb(255,255,255);
-
     &:nth-child(2n+1) {
-      background-color: rgb(240,240,240);
     }
 
     &.local.human {
       font-weight: bold;
+      color: white;
     }
     &.ai {
       font-weight: lighter;
       font-style: italic;
+      color: rgb(160,180,160);
     }
     &.human {
-      background-color: rgb(255,200,200);
+      color: rgb(255,200,200);
     }
 
     &-text {
