--- a/app/styles/user-dashboard.scss
+++ b/app/styles/user-dashboard.scss
@@ -1,14 +1,32 @@
 .user-dashboard {
   &__container {
-    background-color: white;
+    min-width: 320px;
+    background-color: rgba(0,0,0,0.5);
+    color: white;
   }
   &__tr {
-    background-color: white;
-    & td {
-      padding: 8px;
-    }
-    &:nth-child(2n+1) {
-      background-color: rgb(220,220,220);
-    }
+    display: flex;
+    flex-direction: row;
+    padding: 4px;
+    border-top: 1px solid black;
   }
+  &__label {
+    flex: 0 0 64px;
+    text-align: left;
+  }
+  &__title {
+    font-size: 24px;
+    text-transform: uppercase;
+    text-align: center;
+    border: 1px solid black;
+    margin-bottom: -1px;
+    font-weight: bold;
+  }
+  &__value {
+    flex: 1 1 32px;
+    font-size: 24px;
+    font-weight: bold;
+    text-align: right;
+  }
+  
 }
