Getting closer, but we need to have a secure websocket server >:(

--- a/app/components/user-dashboard/template.hbs
+++ b/app/components/user-dashboard/template.hbs
@@ -23,5 +23,9 @@
       <div class="user-dashboard__label">Slope:</div>
       <div class="user-dashboard__value">{{userDisplay.slope}}</div>
     </div>
+    <div class="user-dashboard__tr">
+      <div class="user-dashboard__label">Draft Savings:</div>
+      <div class="user-dashboard__value">{{userDisplay.lastWattsSaved}}</div>
+    </div>
   </div>
 {{/if}}
