--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -8,6 +8,7 @@
 @import './leader-board.scss';
 @import './user-dashboard.scss';
 @import './display-race';
+@import './mini-map-live.scss';
 
 * {
   font-family: sans-serif;
