--- a/app/components/user-set-up-widget/template.hbs
+++ b/app/components/user-set-up-widget/template.hbs
@@ -11,7 +11,7 @@
     <button class="user-set-up__button" {{action 'connectDevice'}}>Connect Device</button>
   </div>
   <div class="user-set-up__element">
-    <div class="user-set-up__label">Your Handicap</div>
+    <div class="user-set-up__label">Your Handicap / FTP</div>
     {{input value=userHandicap placeholder="Your Handicap or FTP" class="user-set-up__input"}}
   </div>
   <div class="user-set-up__element">
