--- a/app/ride/template.hbs
+++ b/app/ride/template.hbs
@@ -1,7 +1,9 @@
 {{#if connection.preRace}}
+  <button {{action 'newRide'}}>Disconnect &amp; Pick Another Ride</button>
   {{display-pre-race frame=frame localRiders=localRiders remoteRiders=remoteRiders}}
 {{else if connection.racing}}
   {{display-race raceState=_raceState}}
 {{else if connection.postRace}}
+  <button {{action 'newRide'}}>Disconnect &amp; Pick Another Ride</button>
   {{display-post-race frame=frame results=connection.raceResults}}
 {{/if}}
