--- a/app/styles/user-set-up-widget.scss
+++ b/app/styles/user-set-up-widget.scss
@@ -3,9 +3,14 @@
     display: flex;
     flex-direction: column;
     text-align: center;
+    max-width: 320px;
+    margin-left: auto;
+    margin-right: auto;
   }
   &__element {
     padding-top: 16px;
+    display: flex;
+    flex-direction: column;
   }
   &__title {
     font-size: 32px;
@@ -23,5 +28,12 @@
   }
   &__button {
     @include big-button();
+  }
+  &__image {
+    flex: 0 0 auto;
+    max-height: 64px;
+    max-width: 64px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
