You can (finally) schedule races!

--- a/app/components/pending-race/template.hbs
+++ b/app/components/pending-race/template.hbs
@@ -43,7 +43,7 @@
     </span>
   </div>
   <div class="pending-race__row">
-    {{mini-map race=race}}
+    {{mini-map race=raceElevations}}
   </div>
   <button class="pending-race__join-button" {{action joinRace race.name}}>Join</button>
 </div>
