--- a/app/styles/common.scss
+++ b/app/styles/common.scss
@@ -1,5 +1,6 @@
 @mixin big-button {
-  width: 320px;
+  max-width: 320px;
+  width: 100%;
   height: 48px;
   border-radius: 16px;
   font-size: 32px;
