--- a/app/styles/set-up-ride.scss
+++ b/app/styles/set-up-ride.scss
@@ -12,4 +12,14 @@
   &__button {
     @include big-button();
   }
+
+  &__create-your-own {
+    margin-bottom: 32px;
+    width: 320px;
+    margin-left: auto;
+    margin-right: auto;
+    &--button {
+      @include big-button();
+    }
+  }
 }
