Adding a little "your device is" line in main connection screen.

--- a/app/components/user-set-up-widget/template.hbs
+++ b/app/components/user-set-up-widget/template.hbs
@@ -12,7 +12,7 @@
     <input type="file" accept="image/*">
   </div>
   <div class="user-set-up__element">
-    <div class="user-set-up__label">Pick Your Device</div>
+     <div class="user-set-up__label">Pick Your Device <br/>Current: {{devices.deviceDescription}}</div>
     <button class="user-set-up__button" {{action 'connectDevice'}}>Connect Device</button>
   </div>
   <div class="user-set-up__element">
