Data saving now works

--- a/app/components/create-race-widget/template.hbs
+++ b/app/components/create-race-widget/template.hbs
@@ -13,4 +13,4 @@
   {{input class="create-race-widget__text" id="when-time" type="time" value=raceTime}}
 </div>
 {{mini-map class="create-race-widget__minimap" race=race}}
-<button class="create-race-widget__button" {{action 'createRace'}}>Schedule Ride</button>
+<button class="create-race-widget__button" {{action 'createRace'}}>Submit Ride</button>
