--- a/app/components/user-set-up-widget/template.hbs
+++ b/app/components/user-set-up-widget/template.hbs
@@ -7,9 +7,12 @@
     {{input value=userName placeholder="Your Name" class="user-set-up__input"}}
   </div>
   <div class="user-set-up__element">
-    <div class="user-set-up__label">Your Picture</div>
-    <img class="user-set-up__image">
-    <input type="file" accept="image/*">
+    <label for="user-picture" class="user-set-up__label">Your Picture (click to add)
+      <div class="user-set-up__imagefile">
+        <img class="user-set-up__image">
+        <input id="user-picture" type="file" accept="image/*" class="user-set-up__file" style="display:none;">
+      </div>
+    </label>
   </div>
   <div class="user-set-up__element">
      <div class="user-set-up__label">Pick Your Device <br/>Current: {{devices.deviceDescription}}</div>
