--- a/app/styles/pending-race.scss
+++ b/app/styles/pending-race.scss
@@ -9,11 +9,17 @@
     text-align: left;
   }
   &__content {
-    border: 1px solid white;
+    border-width: 1px 0 0 0px;
+    border-style: solid;
+    border-image: linear-gradient(to right, white, black, white) 1 0%;
     padding: 16px;
     max-width: 320px;
     margin-left: auto;
     margin-right: auto;
+
+    &:nth-child(2n) {
+      background-color: rgb(240,240,240);
+    }
   }
   &__join-button {
     @include big-button();
