--- a/app/styles/set-up-ride.scss
+++ b/app/styles/set-up-ride.scss
@@ -6,7 +6,7 @@
     text-align: center;
   }
   &__title {
-    font-size: 32px;
+    font-size: $title-font-size-desktop;
     margin-bottom: 16px;
   }
   &__button {
@@ -21,5 +21,14 @@
     &--button {
       @include big-button();
     }
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .set-up-ride {
+    &__title {
+      font-size: $title-font-size-phone;
+    }
+    
   }
 }
