Simplifying user dashboard drastically

--- a/app/styles/user-dashboard.scss
+++ b/app/styles/user-dashboard.scss
@@ -28,6 +28,11 @@
     font-weight: bold;
     text-align: right;
   }
+  &__group {
+    flex-direction: row;
+    flex: 1 1 0px;
+    text-align: center;
+  }
   
 }
 
