--- a/app/styles/leader-board.scss
+++ b/app/styles/leader-board.scss
@@ -45,8 +45,12 @@
     &-name {
       flex: 1 1 0px;
     }
+
     &-distance {
       flex: 0 0 64px;
+      font-size: 22px;
+      margin-top: -4px;
+      margin-bottom: -8px;
     }
   }
 }
