--- a/app/styles/pending-race.scss
+++ b/app/styles/pending-race.scss
@@ -7,6 +7,7 @@
   }
   &__row {
     text-align: left;
+    width: 100%;
   }
   &__content {
     border-width: 1px 0 0 0px;
@@ -14,11 +15,16 @@
     border-image: linear-gradient(to right, white, black, white) 1 0%;
     padding: 16px;
     max-width: 320px;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
 
     &:nth-child(2n) {
       background-color: rgb(240,240,240);
+    }
+
+    &.has-humans {
+      background-color: lightgreen;
     }
   }
   &__join-button {
