Fixed some bugs in signup

--- a/app/set-up-ride/template.hbs
+++ b/app/set-up-ride/template.hbs
@@ -10,7 +10,7 @@
     {{/unless}}
   </div>
   <div class="set-up-ride__title">
-    Current Joinable Rides
+    Current Joinable Rides <a href='#' {{action 'refreshAllRaces'}}>Refresh</a>
   </div>
 
   {{#each model.races as |race|}}
