--- a/app/set-up-ride/template.hbs
+++ b/app/set-up-ride/template.hbs
@@ -17,3 +17,5 @@
     {{pending-race frame=frame race=race joinRace=(action 'joinRace')}}
   {{/each}}
 </div>
+
+<div class="bluetooth-warning-socket"></div>
