Inline signup if you haven't signed up before.  Also transmitting user handicaps

--- a/app/ride/template.hbs
+++ b/app/ride/template.hbs
@@ -9,3 +9,9 @@
 {{else if connection.postRace}}
   {{display-post-race frame=frame results=connection.raceResults}}
 {{/if}}
+
+{{#unless _userSignedIn}}
+  <div class="new-user__container">
+    {{user-set-up-widget onDone=(action 'doneAddingUser')}}
+  </div>
+{{/unless}}
