--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -37,16 +37,18 @@ body {
   &__user-status {
     position: fixed;
     top: 100vh;
-    height: 5vh;
+    height: 7.5vh;
     width: 100%;
     transition: top 0.25s;
     background-color: white;
     border: 1px solid green;
     text-align: center;
     padding-top: 4px;
+    font-size: 2.0vh;
+    line-height: 2.0vh;
 
     &.user-valid {
-      top: 95vh;
+      top: 92.5vh;
     }
   }
   &__bluetooth-warning {
