--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -8,6 +8,11 @@
       <i class="fas fa-arrow-right green"></i>
     </div>
     <div class="application__bluetooth-warning--buttons">
+      {{#if hasPlugins}}
+        <button class="application__bluetooth-warning--button" {{action 'connectPlugin'}}>
+          <i class="fas fa-plug"></i>
+        </button>
+      {{/if}}
       <button class="application__bluetooth-warning--button" {{action 'connectDevice'}}>
         <i class="fas fa-bolt"></i>
       </button>
