--- a/app/styles/mini-map-live.scss
+++ b/app/styles/mini-map-live.scss
@@ -2,9 +2,27 @@
   &__container {
     width: 100%;
     height: 100%;
+    max-height: 100px;
   }
   &__image {
     width: 100%;
     height: 100%;
+  }
+}
+
+@media screen and (max-width:640px) and (orientation:landscape) {
+  .mini-map-live {
+    &__container {
+      width: auto;
+      height: 60px;
+      max-height: 60px;
+
+      & canvas {
+        width: auto;
+      }
+    }
+    &__image {
+      width: auto;
+    }
   }
 }
