FTMS write hardening - now has an indicator that glows after successful writes, clears up old devices, and lets the user do mid-race device reconnects

--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -1,6 +1,7 @@
 <div class="application__container">
   {{outlet}}
 
+  <div class="application__device-write" {{action 'connectDevice'}}></div>
   <div class="application__bluetooth-warning {{if bluetoothWarning 'device-gone'}}">
     <div class="application__bluetooth-warning--text">
       <i class="fas fa-exclamation-triangle yellow"></i>
