Battleship first possibly-working checkin!

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -12,6 +12,11 @@
 @import './create-race-widget.scss';
 @import './display-pre-race-rider.scss';
 @import './display-pre-race.scss';
+@import './battleship-map-cell.scss';
+@import './battleship-map.scss';
+@import './battleship.scss';
+@import './battleship-move-selector-bike-cursor.scss';
+@import './vertical-align.scss';
 
 * {
   font-family: sans-serif;
