--- a/app/components/battleship-move-selector-bike-cursor/template.hbs
+++ b/app/components/battleship-move-selector-bike-cursor/template.hbs
@@ -1,3 +1,4 @@
+<h4>{{name}}</h4>
 <div class="battleship-move-selector-bike-cursor__actions">
   <div class="battleship-move-selector-bike-cursor__progress"></div>
   {{#each actionsList as |actionType|}}
