--- a/app/components/battleship-move-selector-bike-shoot/template.hbs
+++ b/app/components/battleship-move-selector-bike-shoot/template.hbs
@@ -1,5 +1,15 @@
 {{#if colSelected}}
-  {{battleship-move-selector-bike-cursor name="Select Target Row" actionsList=rowActions onSelectAction=(action 'onSelectRow') tmNextEvaluation=tmNextEvaluation}}
+  {{battleship-move-selector-bike-cursor 
+      name="Select Target Row" 
+      actionsList=rowActions 
+      onSelectAction=(action 'onSelectRow') 
+      onPendingSelection=(action 'onPendingRow')
+      tmNextEvaluation=tmNextEvaluation}}
 {{else}}
-  {{battleship-move-selector-bike-cursor name="Select Target Column" actionsList=colActions onSelectAction=(action 'onSelectCol') tmNextEvaluation=tmNextEvaluation}}
+  {{battleship-move-selector-bike-cursor 
+      name="Select Target Column" 
+      actionsList=colActions 
+      onSelectAction=(action 'onSelectCol') 
+      onPendingSelection=(action 'onPendingCol')
+      tmNextEvaluation=tmNextEvaluation}}
 {{/if}}
