--- a/app/components/battleship-move-selector-bike/template.hbs
+++ b/app/components/battleship-move-selector-bike/template.hbs
@@ -5,23 +5,28 @@
 
   {{#if isShoot}}
     {{battleship-move-selector-bike-shoot msTempo=tempoPeriodMs 
+                                          msTempoDefault=tempoPeriodMsDefault
                                          game=theirGame 
+                                         onNeedHighlight=onNeedHighlight
                                          onSelectShoot=(action 'onSelectShoot') 
                                          }}
   {{else if isMoveNW}}
     {{battleship-move-selector-bike-move msTempo=tempoPeriodMs 
+                                         msTempoDefault=tempoPeriodMsDefault
                                          game=yourGame 
                                          isNW=isNW 
                                          onSelectMove=(action 'onSelectMove') 
                                          }}
   {{else if isMoveSE}}
     {{battleship-move-selector-bike-move msTempo=tempoPeriodMs 
+                                         msTempoDefault=tempoPeriodMsDefault
                                          game=yourGame 
                                          isNW=isNW 
                                          onSelectMove=(action 'onSelectMove') 
                                          }}
   {{else if isRadar}}
     {{battleship-move-selector-bike-radar msTempo=tempoPeriodMs 
+                                         msTempoDefault=tempoPeriodMsDefault
                                          game=theirGame
                                          onSelectRadar=(action 'onSelectRadar') 
                                          }}
