--- a/app/styles/battleship-map-cell.scss
+++ b/app/styles/battleship-map-cell.scss
@@ -44,6 +44,9 @@ $sea2: #74a5fD;
     &:nth-child(2n+1) {
       background: linear-gradient(to left, $sea1, $sea2 );
     }
+    &.highlight {
+      border: 1px solid red;
+    }
     &:hover {
       background: $sea2;
       border: 1px solid rgba(0,0,0, 0.5);
@@ -60,6 +63,7 @@ $sea2: #74a5fD;
     left: -12.5%;
     border-radius: 50%;
     border: 1px solid green;
+    background-color: rgba(0,255,0,0.3);
     width: 125%;
     height: 125%;
     z-index: 1;
