--- a/app/battleship/template.hbs
+++ b/app/battleship/template.hbs
@@ -38,6 +38,7 @@
             Nobody else is playing right now.
           {{/each}}
         </ul>
+        <button {{action 'refreshWaiting'}}>Refresh Waiting Players</button>
       {{/vertical-align}}
     </div>
   {{/if}}
