--- a/app/components/battleship-map/template.hbs
+++ b/app/components/battleship-map/template.hbs
@@ -1,4 +1,4 @@
-<h3 class="battleship-map__title">{{title}}</h3>
+<h3 class="battleship-map__title">{{title}} {{mapId}}</h3>
 {{#each rows as |row index|}}
   <div class="battleship-map__row">
     {{#each row.cols as |cell|}}
