--- a/app/styles/battleship-move-selector-bike-cursor.scss
+++ b/app/styles/battleship-move-selector-bike-cursor.scss
@@ -38,6 +38,20 @@
 
     transition: height 0.2s;
   }
+  &__prepare {
+    position: absolute;
+    width: 100%;
+    top: 0px;
+    left: 0px;
+    height: 100%;
+    background-color: rgba(255,255,255,0.7);
+    display: block;
+    z-index: 3;
+    text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
   &__average {
     @include indicator();
     background-color: green;
