--- a/app/styles/tourjs-header.scss
+++ b/app/styles/tourjs-header.scss
@@ -1,10 +1,20 @@
 .tourjs-header {
   &__container {
-    
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    width: 320px;
   }
   &__title {
+    display: inline-block;
     font-size: 96px;
     text-align: center;
     margin-bottom: 48px;
+    text-decoration: none;
+    color: black;
+
+    &:visited {
+      color: black;
+    }
   }
 }
