--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -14,6 +14,9 @@
           <i class="fas fa-plug"></i>
         </button>
       {{/if}}
+      <button class="application__bluetooth-warning--button" {{action 'connectHrm'}}>
+        <i class="fas fa-heart"></i>
+      </button>
       <button class="application__bluetooth-warning--button" {{action 'connectDevice'}}>
         <i class="fas fa-bolt"></i>
       </button>
@@ -25,6 +28,9 @@
     {{/if}}
     {{localUser.name}}<br />
     <i class="fas fa-bolt"></i>{{localUser.lastPower}} 
+    {{#if localUser.hrm}}
+      <i class="fas fa-heart"></i>{{localUser.hrm}} 
+    {{/if}}
     <a href='#' {{action 'connectDevice'}}>BLE</a> 
     {{#if hasPlugins}}
       <a href='#' {{action 'connectPlugin'}}>Plugin</a>
