HRM control mode first pass?

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -18,6 +18,7 @@
 @import './battleship-move-selector-bike-cursor.scss';
 @import './vertical-align.scss';
 @import './index.scss';
+@import './hrm-control.scss';
 
 * {
   font-family: sans-serif;
